# cannyedge-app

./: README.md
CannyEdgeApp_FullAndroid/: README.md  build.gradle  download_opencv_sdk.sh  gradlew  gradlew.bat  local.properties  package-lock.json  settings.gradle
CannyEdgeApp_FullAndroid/app/: build.gradle
CannyEdgeApp_FullAndroid/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
CannyEdgeApp_FullAndroid/app/src/main/java/com/example/canny/: MainActivity.kt
CannyEdgeApp_FullAndroid/app/src/main/res/layout/: activity_main.xml
